--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
   },
